--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-testreal/ filter=lfs diff=lfs merge=lfs -text
+testreal1[[:space:]](2).zip filter=lfs diff=lfs merge=lfs -text
+testreal1.zip filter=lfs diff=lfs merge=lfs -text
